# libattributes

./: CMakeLists.txt  Doxyfile  README  attributes.hpp  settable.hpp
examples/: CMakeLists.txt  demo.cpp
src/: abstract_attribute.hpp  attribute.hpp  attributes.hpp  string2type.hpp
unittest/: AttributeTest.cpp  AttributesTest.cpp  CMakeLists.txt  String2typeTest.cpp  unittest.cpp
